--- a/Poker.Graphgen/Poker.Graphgen.csproj
+++ b/Poker.Graphgen/Poker.Graphgen.csproj
@@ -70,7 +70,7 @@
     <Compile Include="Model\HandInfo.cs" />
     <Compile Include="NodeGenConfig.cs" />
     <Compile Include="Model\OpType.cs" />
-    <Compile Include="Model\Section.cs" />
+    <Compile Include="Model\Round.cs" />
     <Compile Include="Utils\CardsShuffler.cs" />
     <Compile Include="Cfr\CfrPlus.cs" />
     <Compile Include="HandGenerator.cs" />
